Scheduler feature (#12)
* feature: add scheduling feature

* opencode: create symlink for agents

* feature: review scheduling feature

---------
